# Multi-threaded-Ray-Tracing

./: CMakeLists.txt  Multi-threaded Ray Tracing.txt  Prog_AlanDevkota 1.cpp  README.md  output.tga  tga-to-jpg.py
